<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_event"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_option_1" />

        <item
            android:id="@+id/nav_my_events"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_option_2" />
        <!--<item-->
            <!--android:id="@+id/nav_settings"-->
            <!--android:icon="@drawable/ic_settings"-->
            <!--android:title="@string/menu_option_3"-->
            <!--android:visible="true"/>-->
    </group>


        <item android:title="Opções de logout" >
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/menu_option_logout" />
            <item
                android:id="@+id/nav_change_account"
                android:icon="@drawable/ic_people"
                android:title="@string/menu_option_change_account" />
        </menu>
    </item>

    <item android:title="Opções de login" >
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_exit"
                android:title="@string/menu_option_login" />
        </menu>
    </item>

</menu>
